--- a/site_config.json
+++ b/site_config.json
@@ -5,38 +5,15 @@
     "site_domain": "my_name.github.io",
     "site_protocol": "https",
     "config_template_dir": "config",
-    "source": "https://github.com/my_name/my_name.github.io/blob/main",
     "route": {
         "docs": {
-            "/get_started/zh/": "docs/get_started/zh"
+            "/doc1/": "docs/doc1"
         },
         "pages": {
-            "/": "pages/index/zh"
+            "/": "pages/index"
         },
         "assets": {
-            "/static/": "static",
-            "/get_started/assets/": "docs/get_started/assets"
-        },
-        "blog": {
-            "/blog/": "blog"
-        }
-    },
-    "translate": {
-        "docs": {
-            "/get_started/zh/": [
-                {
-                    "url": "/get_started/en/",
-                    "src": "docs/get_started/en"
-                }
-            ]
-        },
-        "pages": {
-            "/": [
-                {
-                    "url": "/en/",
-                    "src": "pages/index/en"
-                }
-            ]
+            "/static/": "static"
         }
     },
     "plugins": {
@@ -49,22 +26,10 @@
             "from": "pypi",
             "config": {
                 "dark": true,
-                "show_print_page": true,
-                "heading_no_counter": false,
+                "show_print_page": false,
                 "env":{
                     "main_color": "#4caf7d"
                 }
-            }
-        },
-        "teedoc-plugin-search":{
-            "from": "pypi",
-            "config": {
-                "search_hint": "Search"
-            }
-        },
-        "teedoc-plugin-blog": {
-            "from": "pypi",
-            "config": {
             }
         },
         "teedoc-plugin-assets": {
